--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Phrase Based Line Break Sample</string>
+    <string name="sample">常に最新、最高のモバイル。Androidを開発した同じチームから。最新のAndroid,今すぐダウンロード</string>
 </resources>
